--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,10 @@ dependencies {
     testCompile "org.seleniumhq.selenium:selenium-support:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:3.14.0"
     testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.14.0"
+    implementation project(":absdk")
 }
+
+
 
 bootRun {
     ignoreExitValue true
@@ -93,15 +96,15 @@ tasks.withType(GroovyCompile) {
 }
 
 webdriverBinaries {
-    chromedriver '2.45.0'
-    geckodriver '0.24.0'
+    //chromedriver '2.45.0'
+    //geckodriver '0.24.0'
 }
 
 tasks.withType(Test) {
-    systemProperty "geb.env", System.getProperty('geb.env')
-    systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
-    systemProperty "webdriver.chrome.driver", System.getProperty('webdriver.chrome.driver')
-    systemProperty "webdriver.gecko.driver", System.getProperty('webdriver.gecko.driver')
+    //systemProperty "geb.env", System.getProperty('geb.env')
+    //systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
+    //systemProperty "webdriver.chrome.driver", System.getProperty('webdriver.chrome.driver')
+    //systemProperty "webdriver.gecko.driver", System.getProperty('webdriver.gecko.driver')
 }
 
 
@@ -109,3 +112,4 @@ assets {
     minifyJs = true
     minifyCss = true
 }
+
